# mmux

./: .gitignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md  install.sh  pyproject.toml
docs/: demo.md  demo.tape  design.md  design.zh-CN.md  launch.md  state-machine-v2.md
scripts/: demo_alpha.py  render_demo_svg.py
src/mmux/: __init__.py  cli.py
tests/: test_state.py
